Ensure article border visible under inactive tabs
* The blue border line around the entire article should appear "under"
the inactive tabs, but not "under" the active tabs
* Ensure `height` of inactive tabs does not extend down into article
* Ensure active tab does extend down into article (add `border-bottom`
that matches article BG color that extends down into article,
obscuring blue border around articles
* Tested on Firefox (Win/OSX), Chrome, Safari, IE

--- a/www/gb/skins/Vector/components/tabs.less
+++ b/www/gb/skins/Vector/components/tabs.less
@@ -11,7 +11,7 @@ div.vectorTabs h3 {
 div.vectorTabs {
 	/* @noflip */
 	float: left;
-	height: 2.5em;
+	height: 2.4em;
 	.background-image('images/tab-break.png');
 	background-position: bottom left;
 	background-repeat: no-repeat;
@@ -58,6 +58,7 @@ div.vectorTabs {
 
 		&.selected {
 			background-color: @body-background-color;
+			border-bottom: 3px solid @body-background-color;
 			a,
 			a:visited{
 				color: #333;
@@ -133,7 +134,7 @@ div#mw-head div.vectorMenu h3 {
 	background-position: bottom right;
 	background-color: #e6e6e3;
 	font-size: 1em;
-	height: 2.5em;
+	height: 2.4em;
 	// This effectively moves the "background border" outside of the element to act like a real
 	// border. It is necessary for the dropdown (div.vectorMenu div.menu) to align well.
 	padding-right: 1px;
